<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/time" >
        <ListPreference
            android:key="timer_value"
            android:summary="@string/time"
            android:title="@string/time">
        </ListPreference>

        <ListPreference
            android:key="increment_value"
            android:summary="@string/increment"
            android:title="@string/increment">
        </ListPreference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/action_settings" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSendReport"
            android:summary="@string/soundFinal" >
        </CheckBoxPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/time" >
        <EditTextPreference
            android:title="@string/defaultPlayerName1"
            android:summary="@string/defaultPlayerName2"
            android:key="prefUsername"/>

        <EditTextPreference
            android:title="@string/defaultPlayerName2"
            android:summary="@string/time"
            android:key="prefUsername"/>
    </PreferenceCategory>



</PreferenceScreen>